[gd_scene load_steps=26 format=3 uid="uid://diol0b6nt06in"]

[ext_resource type="Script" uid="uid://cqbr6x8e1mgus" path="res://scenes/entities/player/player.gd" id="1_rkbax"]
[ext_resource type="Texture2D" uid="uid://cmcfkilxgu556" path="res://scenes/entities/player/Shadow.png" id="2_g1dw6"]
[ext_resource type="Script" uid="uid://cx3yyfufq8rk8" path="res://scenes/entities/player/player_skin.gd" id="3_5sj0x"]
[ext_resource type="Script" uid="uid://dvt5lefgux525" path="res://scripts/finite_states_machines/state_machine.gd" id="4_nh4ur"]
[ext_resource type="Resource" uid="uid://d25l6n7on3gw8" path="res://resources/skins/skin_character_doggo.tres" id="4_xy2vv"]
[ext_resource type="Script" uid="uid://cksttb7rm5fnl" path="res://scripts/finite_states_machines/player/idle_state.gd" id="5_8akj5"]
[ext_resource type="Resource" uid="uid://bh5ewqhrtgxue" path="res://resources/skins/skin_character_squirrel.tres" id="5_r4dfn"]
[ext_resource type="Resource" uid="uid://hx2ue0ym5vj" path="res://resources/skins/skin_character_mouse.tres" id="6_70kwc"]
[ext_resource type="Script" uid="uid://bi3j5eiasuxhy" path="res://scripts/finite_states_machines/player/running_state.gd" id="6_bj7e2"]
[ext_resource type="Script" uid="uid://cf4deu1c6f66i" path="res://scripts/finite_states_machines/player/dashing_state.gd" id="7_bj7e2"]
[ext_resource type="Resource" uid="uid://ct7fndnu1ln2p" path="res://resources/skins/skin_character_bunny.tres" id="7_yywfu"]
[ext_resource type="PackedScene" uid="uid://cp3km3fnol4ig" path="res://scenes/component/health_component.tscn" id="8_r4dfn"]
[ext_resource type="PackedScene" uid="uid://k3qunapgqxkp" path="res://scenes/component/hurtbox_component.tscn" id="11_70kwc"]
[ext_resource type="PackedScene" uid="uid://co4v0dqhcd5wg" path="res://scenes/component/hit_flash_sprite_component.tscn" id="11_yywfu"]
[ext_resource type="PackedScene" uid="uid://ch7jqdfbu4el4" path="res://scenes/entities/shield/shield.tscn" id="12_knby6"]
[ext_resource type="Shader" uid="uid://cio4dge6agb86" path="res://resources/shaders/hit_flash_sprite_component.gdshader" id="12_w3p2j"]
[ext_resource type="Texture2D" uid="uid://d03ubl7xpaihe" path="res://scenes/entities/player/tilemaptest.png" id="15_knby6"]
[ext_resource type="Texture2D" uid="uid://bw1e2f5e8uyh8" path="res://assets/icons/tile_0676.png" id="18_w3p2j"]

[sub_resource type="Animation" id="Animation_rkbax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/HitFlashSpriteComponent:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bj7e2"]
resource_name = "dash"
length = 0.12
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(1.3, 0.7), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_oul6g"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/HitFlashSpriteComponent:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/HitFlashSpriteComponent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.8), Vector2(0.8, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g1dw6"]
_data = {
&"RESET": SubResource("Animation_rkbax"),
&"dash": SubResource("Animation_bj7e2"),
&"run": SubResource("Animation_oul6g")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_yywfu"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oul6g"]
radius = 4.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_18p7g"]
resource_local_to_scene = true
shader = ExtResource("12_w3p2j")
shader_parameter/percent = 0.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("aim_root")]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_rkbax")
aim_root = NodePath("Visuals/WeaponRoot")
character_spritesheet = ExtResource("15_knby6")
available_skins = Array[ExtResource("3_5sj0x")]([ExtResource("4_xy2vv"), ExtResource("5_r4dfn"), ExtResource("6_70kwc"), ExtResource("7_yywfu")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g1dw6")
}

[node name="FireRateTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="HealthComponent" parent="." instance=ExtResource("8_r4dfn")]
max_health = 50

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("11_70kwc")]
position = Vector2(0, -6)
collision_layer = 1
collision_mask = 260
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_yywfu")
debug_color = Color(0.9607843, 0, 0, 0.41960785)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_oul6g")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.54901963)
scale = Vector2(1.25, 1.25)
texture = ExtResource("2_g1dw6")

[node name="ReloadSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(13, -18)
scale = Vector2(0.7, 0.7)
texture = ExtResource("18_w3p2j")

[node name="Shield" parent="." instance=ExtResource("12_knby6")]
arc_radius = 25.0
offset_distance = 0.24
center_marker_path = NodePath("../Visuals/CenterPivot")

[node name="Visuals" type="Node2D" parent="."]

[node name="CenterPivot" type="Marker2D" parent="Visuals"]
position = Vector2(0, -6)
gizmo_extents = 5.0

[node name="HitFlashSpriteComponent" parent="Visuals" node_paths=PackedStringArray("health_component") instance=ExtResource("11_yywfu")]
material = SubResource("ShaderMaterial_18p7g")
texture = ExtResource("15_knby6")
offset = Vector2(1, -11)
hframes = 4
vframes = 4
health_component = NodePath("../../HealthComponent")

[node name="WeaponRoot" type="Node2D" parent="Visuals"]
position = Vector2(0, -2)

[node name="WeaponAnimationRoot" type="Node2D" parent="Visuals/WeaponRoot"]
position = Vector2(3, -2)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_nh4ur")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("5_8akj5")

[node name="RunningState" type="Node" parent="StateMachine"]
script = ExtResource("6_bj7e2")

[node name="DashingState" type="Node" parent="StateMachine"]
script = ExtResource("7_bj7e2")
